name:                docker-testing
version:             0.1.0.0
synopsis:            Executables for testing Docker edge cases
license:             BSD3
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           2016 FP Complete
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable sigterm
  main-is:             sigterm.hs
  default-language:    Haskell2010
  build-depends:       base, bytestring, process, unix
  ghc-options:         -Wall -threaded

executable orphans
  main-is:             orphans.hs
  default-language:    Haskell2010
  build-depends:       base, bytestring, process, unix
  ghc-options:         -Wall -threaded

executable surviving
  main-is:             surviving.hs
  default-language:    Haskell2010
  build-depends:       base, bytestring, process, unix
  ghc-options:         -Wall -threaded
